# ats-checker

./: .gitignore  AGENTS.md  AGENTS_QUICKSTART.md  AGENTS_ROADMAP.md  AGENTS_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  JOBSPY_SETUP.md  README.md  README_JOB_SCRAPER.md  RUST_REWRITE_TODO.md  UPGRADE_GUIDE.md  agents.py  cli_commands.py  clippy.toml  config.json  config.py  gemini_integrator.py  input_handler.py  job_scraper_base.py  job_scraper_manager.py  job_scrapers.py  job_scrapers_improved.py  main.py  output_generator.py  processed_resumes_state.json  pytest.ini  recommendations.py  requirements.txt  resume_processor.py  resume_schema.json  schema_validation.py  scoring.py  state_manager.py  toml_io.py
.claude/: settings.local.json
agents/: README.md  __init__.py  integration_tester.py
ats-checker-rs/: .gitignore  Cargo.toml
ats-checker-rs/src/: lib.rs
ats-checker-rs/src/config/: mod.rs
ats-checker-rs/src/input/: mod.rs
ats-checker-rs/src/scraper/: saved_search.rs
ats-checker-rs/src/utils/: extract.rs  hash.rs  mod.rs
benches/: hashing.rs  scoring.rs  toml_io.rs
config/: config.toml  resume_schema.json  scoring_weights.toml
data/: saved_searches.toml
docs/: PROVIDER_PRESETS.md
examples/: sample_job_description.txt  sample_resume.md  sample_resume.txt
prompts/: prompt_library.py
providers/: anthropic_agent.py  llama_agent.py
python-original/: README_PYTHON.md  agents.py  gemini_integrator.py  job_scraper_manager.py  job_scrapers_improved.py  main.py  resume_processor.py  state_manager.py  utils.py
python_jobspy/: README.md  jobspy_bridge.py  requirements.txt  setup.sh  setup_windows.bat
src/: error.rs  lib.rs
tests/: README_TESTS.md  test_agent_registry.rs  test_cli.rs  test_cli_commands.py  test_cli_handlers.rs  test_config.rs  test_cross_platform.rs  test_error_handling.rs  test_file_locking.rs  test_gemini_integrator.py  test_graceful_degradation.rs  test_hashing.rs  test_input_handler.py  test_integration.py  test_interactive_menu.rs  test_iteration.rs  test_job_description_integration.py  test_job_results_ranking.py  test_job_scraping.rs  test_job_search_e2e.rs  test_output.rs  test_output_generator.py  test_pipeline_integration.rs  test_prompts.py  test_providers.py  test_recommendations.rs  test_resume_processor.py  test_resume_processor_artifacts.py  test_resume_processor_score_cache.py  test_scoring.rs  test_state.rs  (+5 more)
(+57 files in other folders)
