[package]
name = "ats-checker-rs"
version = "0.1.0"
edition = "2021"
authors = ["ATS Checker Contributors"]
description = "ATS Resume Checker - Enhance resumes using AI and score them against job descriptions"
license = "MIT"
repository = "https://github.com/your-username/ats-checker"
keywords = ["resume", "ats", "ai", "job-search", "career"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "ats_checker"
path = "src/lib.rs"

[[bin]]
name = "ats-checker"
path = "src/bin/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4.5", features = ["derive", "env", "string"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography (hashing)
sha2 = "0.10"
hex = "0.4"

# PDF extraction
pdf-extract = "0.8"

# Regex
regex = "1.10"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Temporary files
tempfile = "3.13"

# Directory traversal
walkdir = "2.5"

# Interactive CLI
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# JSON Schema validation
jsonschema = "0.22"

# URL handling
url = "2.5"

# Lazy initialization
once_cell = "1.20"

[dev-dependencies]
# Testing utilities
pretty_assertions = "1.4"
mockall = "0.13"
tokio-test = "0.4"
rstest = "0.23"
wiremock = "0.6"
test-case = "3.3"
insta = { version = "1.40", features = ["json", "toml"] }
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.5"
assert_fs = "1.1"
predicates = "3.1"

[features]
default = []
# Enable OCR support (requires Tesseract)
ocr = []
# Enable all providers
all-providers = []

# Benchmarks will be added later
# [[bench]]
# name = "scoring"
# harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
